--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>QR-CODE-COMPONENT</title>
 </head>
 <body>
+    <header></header>
     <main id="container">
         <img src="image-qr-code.png" alt="qrcode" id="image">
         <h2 id="header">Improve your front-end skills by building projects</h2>
         <p id="paragraph">Scan the QR code to visit frontend mentor and take your coding skills to the next level</p>
     </main>
+    <footer></footer>
 </body>
 </html>
